--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/eluanshi7/eluanshi7.github.io.git" # you code r
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "This blog is still under construction "
 sidebar-avatar: /img/about_guo_zhou.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
